Fixed app banner and stack thumbnail layout issues

--- a/client/layout/layout/_main.scss
+++ b/client/layout/layout/_main.scss
@@ -17,3 +17,7 @@
 .content {
     -webkit-overflow-scrolling: touch;
 }
+
+.content_inner {
+    padding: 15px;
+}
