--- a/client/layout/pages/_bookmarks.scss
+++ b/client/layout/pages/_bookmarks.scss
@@ -1,5 +1,4 @@
 .bookmarks {
-    padding: 15px;
     overflow: auto;
     height: 100%;
 }
