--- a/client/layout/pages/_section.scss
+++ b/client/layout/pages/_section.scss
@@ -1,5 +1,4 @@
 .section {
-    padding: 15px;
     height: 100%;
     overflow: auto;
 
